--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.0",
     "migrate-mongoose-typescript": "^3.3.4",
     "morgan": "~1.9.0",
-    "require-all": "^3.0.0"
+    "require-all": "^3.0.0",
+    "swagger-node-express": "^2.1.3",
+    "swagger-ui-express": "^4.0.4"
   }
 }
